Fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 .header {
